Mise à jour du PDF de l'exemplaire papier et correction de l'alignement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ display: none;
 }
 
 /*Centrage des titres*/
-#mesInterets, #mesProjets, #mesCompetences, #monParcours, #aPropos {
+#mesInterets, #mesProjets, #mesCompetences, #monParcours, #aPropos, #aboutMe {
   text-align: center;
 }
 
